# robotGazeControl

./: README.txt  video
catkin_ws/: lanzar_avatar.sh  lanzar_seguimiento.sh
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/src/avatar_msg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/avatar_srv/: CMakeLists.txt
catkin_ws/src/blender_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/blender_control/behavior/: buscar.yaml  buscar.yaml~  buscar1.yaml  cabeza.yaml  comportamiento4_12.yaml  comportamiento_nuevo.yaml  demo1.yaml  demo2.yaml  demo2.yaml~  demo3.yaml  demo3.yaml~  demo4.yaml  demo5.yaml  demo_cabeza_nueva.yaml  despertarse.yaml  dormir.yaml~  end.yaml  end.yaml~  expresiones_cabeza_nueva.yaml  guinio.yaml  loco.yaml  loco.yaml~  out.yaml  parpadeo.yaml  sorpresa.yaml  sorpresa.yaml~  tristeza.yaml  tristeza.yaml~
catkin_ws/src/blender_control/cfg/: gestos.yaml  gestos.yaml~  gestos4_12.yaml  gestos_old.yaml
catkin_ws/src/blender_control/src/: comportamiento.py  gestion_gestos.py  gestion_gestos_new.py  monkey.launch  ros_blender.py  ros_blender_bridge.py  ros_blender_bridge_new.py  teleop.py
catkin_ws/src/cabeza/: CMakeLists.txt  urdf.rviz
catkin_ws/src/calibracionOjoPez/: calibracion.py  undistort.py  (+2 more)
dataset/: readme.txt  test1.bag  test2.bag  test3.bag  test4.bag  test5.bag  test_3_personas.bag  test_3_personas_bis.bag  test_3_personas_sin_movimiento_sin_mirar_robot.bag  test_3_personas_sin_movimiento_sin_mirar_robot2.bag  test_3_personas_vfoa.bag
video/: video.txt
(+228 files in other folders)
