<?xml version="1.0"?>
<package>
  <name>blender_control</name>
  <version>0.0.0</version>
  <description>The blender_control package</description>
  <maintainer email="david@todo.todo">david</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>avatar_msg</build_depend>
  <build_depend>avatar_srv</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>avatar_msg</run_depend>
  <run_depend>avatar_srv</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
